- Opponent: Beginning of Combat, Declare Blockers, End of Turn (BC, DB, ET)
This should optimize the out-of-the-box experience for users and help new users figure out when the optimal time to cast instant-speed effects is.
You can still customize these by clicking on the phase stop indicator, and your customizations will be remembered.


---------
New Cards
---------

Flash Foliage
Myriad Landscape
Siege Behemoth


------------
Known Issues
------------

- Commander 2014 cards -
Forge now includes many of the new Commander 2014 cards. It may take a few days/weeks before these new card pictures become available for downloading via the "Download LQ Card Pictures" button. The LQ set pictures tend to take a few more weeks/months to process before they become available for downloading via the "Download LQ Set Pictures" button. Please be patient. The Forge devs are not involved in maintaining the servers that house these pictures.

- New Khans of Tarkir cards -
Forge now includes many of the new Khans of Tarkir cards. It may take a few days/weeks before these new card pictures become available for downloading via the "Download LQ Card Pictures" button. The LQ set pictures tend to take a few more weeks/months to process before they become available for downloading via the "Download LQ Set Pictures" button. Please be patient. The Forge devs are not involved in maintaining the servers that house these pictures.

- Continued Work on Conspiracy -